...
    <!-- HINTS -->
    <string name="hint_budget_name">name</string>
    <string name="hint_budget_plan">plan</string>
    <string name="hint_budget_fact">fact</string>
    <string name="hint_budget_starts_on">start date</string>
    <string name="hint_budget_last_day_at">end date</string>
    <string name="hint_budget_comment">comment</string>
    <string name="hint_budget_currency">currency</string>
    <string name="hint_expenditure_name">name</string>
    <string name="hint_expenditure_plan">plan</string>
    <string name="hint_expenditure_fact">fact</string>
    <string name="hint_expenditure_comment">comment</string>
    <string name="hint_spending_amount">amount</string>
...

    <!-- DIALOG -->
    <string name="dialog_confirmation_yes">Yes</string>
    <string name="dialog_confirmation_no">No</string>
    <string name="dialog_confirmation_gotit">Got it</string>
    <string name="dialog_confirmation_remove">Are you sure?</string>
    <string name="dialog_confirmation_ok">Ok</string>
    <string name="dialog_confirmation_cancel">Cancel</string>
    <string name="dialog_currency_title">Select currency</string>
    <string name="dialog_blacklist">Do you really want to add %s to the blacklist?</string>

    <!-- MESSAGES -->
    <string name="message_budget_removing">Budgets can only be removed from the end.</string>
...
    <string name="label_templates_sources">Templates</string>
    <string name="label_templates_autodetect">Autodetect</string>
    <string name="label_templates_blacklist">Black list</string>
    <string name="label_templates_filters">Filters</string>

    <!-- Constants -->
    <string name="constant_budget_truncated">The start date was automatically truncated. Original value is %s</string>
    <string name="constant_yesterday">Yesterday</string>
    <string name="constant_today">Today</string>
    <string name="constant_period_week">One week</string>
    <string name="constant_period_two_weeks">Two weeks</string>
    <string name="constant_period_month">Month</string>
    <string name="constant_period_quarter">Quarter</string>
    <string name="constant_period_year">Year</string>
    <string name="constant_recurrence_never">Never</string>
    <string name="constant_recurrence_daily">Daily</string>
    <string name="constant_recurrence_weekly">Weekly</string>
    <string name="constant_recurrence_monthly">Monthly</string>
    <string name="constant_recurrence_quarterly">Quarterly</string>

...
