...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/settingsPeriodLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{settings.period}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settingsStartDayOfMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:visibility = "@{settings.startDayOfMonthVisible ? View.VISIBLE : View.GONE}"
                        android:gravity="center_vertical"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{settings.startDayOfMonth}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settingsStartDayOfWeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:visibility = "@{settings.startDayOfWeekVisible ? View.VISIBLE : View.GONE}"
                        android:gravity="center_vertical"
...
