...
            android:paddingBottom="10dp"
            android:enabled="false"
            app:error="@{budget.startsOnError}"
            app:errorEnabled='@{!(budget.startsOnError == "")}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budgetStartsOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:inputType="none"
                android:hint="@string/hint_budget_starts_on"
...
            android:paddingBottom="10dp"
            android:enabled="@{budget.isEditable()}"
            app:error="@{budget.lastDayAtError}"
            app:errorEnabled='@{!(budget.startsOnError == "")}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budgetLastDayAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:inputType="none"
                android:hint="@string/hint_budget_last_day_at"
...
